--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,13 @@ dependencies {
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 
 	//database 관련 라이브러리 추가
-	//jdbc 라이브러리
+	//jdbc 라이브러리 (마이바티스 설치 시 jdbc 설치 되어있어야 함)
 	implementation "org.springframework.boot:spring-boot-starter-jdbc"
 	//오라클 라이브러리 (11g edition - gradle, maven 라이센스 문제 공식 지원 불가)
 	implementation fileTree(dir: '/src/main/webapp/WEB-INF/lib', include: ['*.jar'])
+
+	//마이바티스 라이브러리
+	implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0"
 }
 
 test {
